src/Forms/main/main.component.css
.body {
  width: calc(100% - 5rem);
  margin-left: 5rem;
  z-index: 0;
  position: relative;
  top: 0;
  transition: all 0.5s ease;
  padding: 3rem;
  background-color:#EFEFEF;
}

.body-trimmed {
  width: calc(100% - 16.5625rem);
  margin-left: 16.5625rem;
}

.body-md-screen {
  width: calc(100% - 5rem);
  margin-left: 5rem;
}


@media screen and (max-width: 568px) {
.body {
  width: calc(100% - 2rem);
  margin-left: 2rem;
  z-index: 0;
  position: relative;
  top: 0;
  transition: all 0.5s ease;
  padding: 3rem;
  background-color:#EFEFEF;
}

.body-trimmed {
  width: calc(100% - 16.5625rem);
  margin-left: 16.5625rem;
}

.body-md-screen {
  width: calc(100% - 2rem);
  margin-left: 2rem;
}

}

